--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,3 +5,10 @@ body {
 img {
   max-width: 100%;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
